2001-11-19  Zack Weinberg  <zack@codesourcery.com>

	* mkconfig.sh: Undefine ENABLE_NLS if GENERATOR_FILE is
	defined (prevents link errors when gettext isn't in the system
	library).

2001-11-19  DJ Delorie  <dj@redhat.com>

	* read-rtl.c (ISDIGIT, ISSPACE): Make sure we have these.
	(validate_const_int): New.
	(read_rtx): Validate constant integers.
	* config/i386/i386.md (pmulhrwv4hi3): Use decimal constants.

2001-11-19  Jakub Jelinek  <jakub@redhat.com>

	* doc/hostconfig.texi (DUMPFILE_FORMAT): Move into the table.

Mon Nov 19 16:57:44 2001  Douglas B. Rupp  <rupp@gnat.com>

	* toplev.c (DUMPFILE_FORMAT): Define default.
	(open_dump_file): Use DUMPFILE_FORMAT in sprintf.
	(close_dump_file, compile_file): Likewise.
	* config/alpha/xm-vms.h (DUMPFILE_FORMAT): Define.
	* doc/hostconfig.texi (DUMPFILE_FORMAT): Document

2001-11-19  Jeff Law <law@redhat.com>

	* gcse.c (cprop_jump): Clear JUMP_LABEL field when we create
	a nop-jump.

2000-11-19  Neil Booth  <neil@daikokuya.demon.co.uk>

	* cppmacro.c (_cpp_backup_tokens): Revert previous check-in.
	Don't fall off the base token run.

2001-11-19  Jason Wilkins <fenix@io.com>

	* Makefile.in: Use INSTALL_SCRIPT not INSTALL_PROGRAM.

Mon Nov 19 15:13:43 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* tree.def (VIEW_CONVERT_EXPR): New tree code.
	* tree.h (handled_component_p): New declaration.
	* alias.c (handled_component_p): Move function from here ...
	* expr.c (handled_component_p): ... to here and non longer static.
	(is_zeros_p, case VIEW_CONVERT_EXPR): New case.
	(store_field): Remove unneeded MEM_COPY_ATTRIBUTES call.
	(get_inner_reference): Handle VIEW_CONVERT_EXPR.
	(expand_expr, case VAR_DECL): Clean up handling of re-layout case.
	(expand_expr, case VIEW_CONVERT_EXPR): New case.
	(expand_expr, cse ADDR_EXPR): No need to copy if already
	BIGGEST_ALIGNMENT.
	* fold-const.c (fold, case VIEW_CONVERT_EXPR): New case.
	* varasm.c (initializer_constant_value_p, case VIEW_CONVERT_EXPR): New.