@@ -1,3 +1,7 @@
+2001-11-19  Geoffrey Keating  <geoffk@redhat.com>
+
+	* expmed.c (extract_bit_field): Don't create invalid SUBREGs.
+
 2001-11-19  Zack Weinberg  <zack@codesourcery.com>
 
 	* mkconfig.sh: Undefine ENABLE_NLS if GENERATOR_FILE is
